--- a/static/index.html
+++ b/static/index.html
@@ -7,14 +7,14 @@
     <title>Animated Page</title>
     <style>
         @font-face {
-            font-family: 'F';
-            src: url("FiraCode.TTF");
+            font-family: "F";
+            src: url("./F.ttf") format("truetype");
         }
 
         body {
             background: #000000;
             /* Pure black background */
-            font-family: 'Arial', sans-serif;
+            font-family: 'F';
             display: flex;
             justify-content: center;
             align-items: center;
@@ -37,7 +37,6 @@
 
         h1 {
             font-size: 2.3rem;
-            font-family: 'F';
             animation: slideIn 0.5s ease-out;
             background: linear-gradient(135deg, #c42121, #ff6767);
             -webkit-background-clip: text;
@@ -47,7 +46,6 @@
 
         h2 {
             font-size: 2rem;
-            font-family: 'F';
             animation: slideIn 0.5s ease-out;
             display: flex;
             justify-content: center;
@@ -60,7 +58,6 @@
 
         p {
             font-size: 1.3rem;
-            font-family: 'Fira Code Regular';
             animation: fadeIn 2s ease-in;
             background: linear-gradient(135deg, #3c53e7, #e67e22);
             -webkit-background-clip: text;
