--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
     <style>
         @font-face {
             font-family: "F";
-            src: url("./F.ttf") format("truetype");
+            src: url("./F.woff") format("woff");
         }
 
         body {
@@ -170,77 +170,31 @@
     <div class="container">
         <h1>Under Development By Mehtab Alam Khan</h1>
         <div>
-            <h2>This is a self hosted site running on&nbsp;</h2>
-            <svg id="pi" xmlns:xlink="http://www.w3.org/1999/xlink" height="30" viewBox="0 0 223 30" width="223"
-                xmlns="http://www.w3.org/2000/svg">
+            <h2>Hosted on AWS EC2 with 1vCPU 2.5Ghz 1GB </h2><svg xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+                <!-- Generator: Sketch 64 (93537) - https://sketch.com -->
+                <title>Icon-Architecture/16/Arch_Amazon-EC2_16</title>
+                <desc>Created with Sketch.</desc>
                 <defs>
-                    <linearGradient id="gradient1" x1="0%" y1="0%" x2="60%" y2="50%">
-                        <stop offset="0%" style="stop-color:rgb(117, 32, 207);stop-opacity:1" />
-                        <stop offset="100%" style="stop-color:#b68eeb;stop-opacity:1" />
+                    <linearGradient x1="0%" y1="100%" x2="100%" y2="0%" id="linearGradient-1">
+                        <stop stop-color="#C8511B" offset="0%" />
+                        <stop stop-color="#FF9900" offset="100%" />
                     </linearGradient>
                 </defs>
-                <g fill="#fff">
-
-                    <g fill="#9e6cdf">
-                        <path
-                            d="m219.1 0h-22.3c-2.1 0-3.8 1.7-3.8 3.9v22.1c0 2.1 1.7 3.9 3.8 3.9h22.3c2.1 0 3.8-1.7 3.8-3.9v-22.1c0-2.2-1.7-3.9-3.8-3.9zm0 28.1h-22.3c-1.1 0-2.1-.9-2.1-2.1v-22.1c0-1.2.9-2.1 2.1-2.1h22.3c1.1 0 2.1.9 2.1 2.1v22.1c0 1.1-.9 2.1-2.1 2.1z" />
-                        <path
-                            d="m208.2 12.2c-1.2 0-2.2.3-3.1.8l.6-5.1h7.5v-2.2h-9.6l-.9 9.3 1.9.5.6-.5c.6-.5 1.4-.7 2.4-.7 1.1 0 2 .4 2.7 1.1s1 1.8 1 3c0 1.3-.3 2.4-.9 3.1-.6.8-1.5 1.1-2.6 1.1-1 0-1.8-.3-2.4-.8s-1-1.3-1.1-2.4h-2.3c.1 1.6.7 2.9 1.8 3.8 1 .9 2.4 1.4 4 1.4 1.9 0 3.3-.6 4.3-1.7s1.6-2.6 1.6-4.5-.5-3.4-1.5-4.6c-1-1-2.3-1.6-4-1.6z" />
-                        <path
-                            d="m48.2 16.5c1.1-.5 1.9-1.2 2.5-2 .5-.8.8-1.9.8-3.2 0-1.8-.6-3.2-1.8-4.2s-2.9-1.5-5.1-1.5h-6.6c-.2 0-.4.2-.4.4v17.9c0 .2.2.4.4.4h3.1c.2 0 .4-.2.4-.4v-6.5h3.1l3.4 6.6c.1.1.2.2.4.2h3.4c.3 0 .4-.3.3-.5zm-1.3-2.8c-.5.5-1.3.7-2.2.7h-3.1v-5.6h3.1c1 0 1.8.3 2.3.8s.7 1.2.7 2.1c-.1.8-.3 1.5-.8 2z" />
-                        <path
-                            d="m65 15.1c0-1.6-.5-2.8-1.5-3.6-1-.9-2.4-1.3-4.1-1.3-1.1 0-2.1.2-3 .6s-1.6.9-2.1 1.6c-.4.6-.6 1.2-.7 1.8 0 .2.1.4.4.4h3c.2 0 .3-.1.3-.3.1-.4.2-.7.5-.9.4-.3.8-.4 1.5-.4s1.2.2 1.6.6c.3.4.5.9.5 1.5v.8h-1.7c-2.1 0-3.6.4-4.7 1.2s-1.6 1.9-1.6 3.4c0 1.2.4 2.2 1.3 3s2 1.2 3.4 1.2 2.6-.5 3.5-1.5c.1.4.2.7.3 1 .1.1.2.2.3.2h3.1c.3 0 .4-.3.3-.5-.3-.7-.4-1.6-.4-2.7zm-4.7 6.3c-.5.2-1 .4-1.5.4-.6 0-1-.1-1.3-.4-.4-.4-.5-.8-.5-1.2v-.2c.1-1.3 1.1-1.9 3-1.9h1.4v2.4c-.3.3-.7.6-1.1.9z" />
-                        <path
-                            d="m75.7 16.6c-.6-.2-1.4-.4-2.3-.6s-1.6-.4-2-.7-.6-.6-.6-1 .2-.8.5-1.1.8-.4 1.4-.4c.7 0 1.3.2 1.6.5s.4.6.5 1c0 .2.2.3.4.3h3c.2 0 .4-.2.4-.4-.1-1.2-.6-2.1-1.6-2.8-1.1-.8-2.5-1.2-4.2-1.2-1.6 0-3 .4-4 1.2s-1.5 1.8-1.5 3.1c0 2.1 1.6 3.5 4.9 4.2 1 .2 1.7.4 2.2.7.4.3.7.6.7 1.1 0 .4-.2.8-.5 1.1-.4.3-.9.4-1.6.4-.8 0-1.4-.2-1.8-.5s-.6-.7-.7-1.2c0-.2-.2-.3-.3-.3h-2.8c-.2 0-.4.2-.4.4.1.7.3 1.3.7 1.9.5.7 1.2 1.3 2.1 1.7s1.9.6 3.1.6c1.7 0 3.1-.4 4.2-1.2s1.6-1.8 1.6-3.1c0-1.7-1-3-3-3.7z" />
-                        <path
-                            d="m87.9 10.2c-1.4 0-2.6.5-3.5 1.6l-.1-1c0-.2-.2-.3-.4-.3h-2.7c-.2 0-.4.2-.4.4v18.4c0 .2.2.4.4.4h3c.2 0 .4-.2.4-.4v-6.2c.9 1 2 1.5 3.4 1.5 1.6 0 3-.6 3.9-1.9 1-1.3 1.5-3 1.4-5.1v-.2c0-2.2-.5-4-1.4-5.2-.9-1.3-2.3-2-4-2zm-.9 11.4c-1.2 0-2-.5-2.4-1.4v-5.7c.4-.9 1.2-1.3 2.4-1.3.9 0 1.5.3 2 1s.7 1.7.7 3c-.1 2.9-1 4.4-2.7 4.4z" />
-                        <path
-                            d="m102.5 10.2c-1.4 0-2.5.5-3.4 1.5v-6.7c0-.2-.2-.4-.4-.4h-3c-.2 0-.4.2-.4.4v18.9c0 .2.2.4.4.4h2.6c.2 0 .3-.1.4-.3l.1-1.2c.9 1.2 2.1 1.7 3.6 1.7 1.7 0 3-.6 4-1.9.9-1.2 1.4-3 1.4-5.2v-.2c0-2.2-.5-4-1.4-5.2s-2.2-1.8-3.9-1.8zm1.5 9.6c-.4 1.2-1.2 1.8-2.4 1.8s-2-.5-2.5-1.5v-5.5c.4-1 1.3-1.4 2.4-1.4.9 0 1.5.3 2 1 .4.6.7 1.7.7 3.1 0 1.1 0 2-.2 2.5z" />
-                        <path
-                            d="m120.5 12c-1.1-1.2-2.6-1.8-4.5-1.8-1.3 0-2.4.3-3.4.9s-1.7 1.4-2.3 2.5c-.5 1.1-.8 2.3-.8 3.7v.4c0 2.1.6 3.7 1.9 5 1.3 1.2 2.9 1.9 5 1.9 1.2 0 2.2-.2 3.1-.7.8-.4 1.5-.9 2.1-1.6.1-.1.1-.3 0-.5l-1.3-1.5c-.1-.2-.4-.2-.5 0-.8.8-1.8 1.3-3.1 1.3-.9 0-1.7-.3-2.3-.8s-1-1.3-1.1-2.2h8.4c.2 0 .4-.2.4-.4v-1.1c0-2.2-.6-3.9-1.6-5.1zm-2 4.1h-5.1c.1-.9.4-1.6.9-2.1s1-.7 1.8-.7 1.4.2 1.8.7c.4.4.6 1.1.7 1.9v.2z" />
-                        <path
-                            d="m131.7 10.3c-.3-.1-.6-.1-.9-.1-1.3 0-2.3.6-3.1 1.9l-.1-1.3c0-.2-.2-.3-.4-.3h-2.8c-.2 0-.4.2-.4.4v13.1c0 .2.2.4.4.4h3c.2 0 .4-.2.4-.4v-8.7c.4-.9 1.4-1.4 2.7-1.4.3 0 .6 0 .9.1.2 0 .4-.1.4-.4v-2.9c.2-.2.1-.3-.1-.4z" />
-                        <path
-                            d="m141.1 10.3c-.3-.1-.6-.1-.9-.1-1.3 0-2.3.6-3.1 1.9l-.1-1.3c0-.2-.2-.3-.4-.3h-2.8c-.2 0-.4.2-.4.4v13.1c0 .2.2.4.4.4h3c.2 0 .4-.2.4-.4v-8.7c.4-.9 1.4-1.4 2.7-1.4.3 0 .6 0 .9.1.2 0 .4-.1.4-.4v-2.9c.1-.2 0-.3-.1-.4z" />
-                        <path
-                            d="m154.7 10.5h-3.2c-.2 0-.3.1-.3.3l-2.5 8.3-2.5-8.3c0-.2-.2-.3-.3-.3h-3.2c-.2 0-.4.2-.3.5l4.7 13.4-.4 1.1c-.2.5-.5.8-.8 1.1-.3.2-.7.3-1.4.3h-.4c-.2 0-.4.2-.4.4v2.1c0 .2.1.3.3.4.5.1.9.2 1.4.2 1.9 0 3.3-.9 4.1-2.7l.3-.7 5.4-15.5c0-.4-.2-.6-.5-.6z" />
-                        <path
-                            d="m174.4 6.5c-1.1-.5-2.3-.8-3.7-.8h-6.9c-.2 0-.4.2-.4.4v17.9c0 .2.2.4.4.4h3.1c.2 0 .4-.2.4-.4v-6.2h3.4c2.2 0 3.9-.5 5.2-1.6 1.2-1.1 1.9-2.5 1.9-4.3 0-1.2-.3-2.3-.9-3.2-.6-1-1.4-1.7-2.5-2.2zm-1.4 7.4c-.5.5-1.3.7-2.3.7h-3.4v-5.8h3.5c.9 0 1.7.3 2.2.9s.8 1.3.8 2.2-.2 1.5-.8 2z" />
-                        <path
-                            d="m181.6 5c-.6 0-1.1.2-1.5.5-.4.4-.6.8-.6 1.4s.2 1 .6 1.4.9.5 1.5.5 1.1-.2 1.5-.5c.4-.4.6-.8.6-1.4s-.2-1-.6-1.4c-.4-.3-.9-.5-1.5-.5z" />
-                        <path
-                            d="m183.1 10.5h-3c-.2 0-.4.2-.4.4v13.1c0 .2.2.4.4.4h3c.2 0 .4-.2.4-.4v-13.1c-.1-.3-.2-.4-.4-.4z" />
+                <g id="Icon-Architecture/16/Arch_Amazon-EC2_16" stroke="none" stroke-width="1" fill="none"
+                    fill-rule="evenodd">
+                    <g id="Icon-Architecture-BG/16/Compute" fill="url(#linearGradient-1)">
+                        <rect id="Rectangle" x="0" y="0" width="24" height="24" />
                     </g>
-                    <path fill="#E30A33"
-                        d="m9.3 15.6c-.2-.7-.7-.7-1.1.1-.4.7-.5 1.7-.2 2.4.3.8.8 1 1.1.3.4-.9.5-1.9.2-2.8z" />
-                    <path fill="#008F58"
-                        d="m10.5 9.6c-.1 0-.1.1 0 .2.9.8 3.2.5 3.5-.8v-.1c-.5-.7-1.8-2.2-3.8-2.9-.1 0 0-.2 0-.1 1.9.3 3.3 1.4 4.1 2.5h.1c1.5-.8.3-3-1-3.4-.1 0-.1 0-.1.1 0 .3-.1.2-.2.2-.4-.5-.9-.7-1.3-.6-.1 0-.1.1-.1.1.2.2 0 .3-.1.2-.7-.4-1.3-.4-1.6-.2v.1c.2.2.1.3 0 .3-.7-.2-1.6 0-1.9.2v.1c.4.4.6.7.7 1.2 0 .2-.3.1-.4.1s-.1 0-.1.1c0 .4.4.8.9 1.2.1 0 .1.2-.1.2-.1 0-.1.1-.1.1.2.4.5.7 1.4.9.2.2.2.3.1.3z" />
-                    <path fill="#E30A33"
-                        d="m14.5 17.1c.7-1.2.4-2.6-.6-3.2s-2.4-.1-3 1.1c-.7 1.2-.4 2.6.6 3.2 1 .5 2.4.1 3-1.1z" />
-                    <path fill="#E30A33" d="m9.2 20.8c0 1.2 1 2.3 2.1 2.5 4.1.7-1.9-6.7-2.1-2.5z" />
-                    <path fill="#E30A33"
-                        d="m19.6 10.9c-1.1-.2-1.5.2-.8 1 .5.6 1.2 1.2 1.9 1.6.9.5 1.2 0 .8-1-.4-.8-1.1-1.4-1.9-1.6z" />
-                    <path fill="#E30A33"
-                        d="m15.6 13.2c1.6 0 3.1-.8 1.8-1.8-.8-.6-1.5-.6-1.8-.6s-1 0-1.8.6c-1.2 1 .2 1.8 1.8 1.8z" />
-                    <path fill="#008F58"
-                        d="m16.8 8.3h.1c.8-1.1 2.2-2.2 4.1-2.5.1 0 .1.1 0 .1-2 .7-3.3 2.2-3.8 2.9v.1c.3 1.3 2.6 1.6 3.5.8.1 0 .1-.1 0-.2-.1 0-.1-.2 0-.2.9-.2 1.2-.6 1.4-.9 0-.1 0-.1-.1-.1-.2 0-.2-.1-.1-.2.6-.4.9-.8.9-1.2 0-.1-.1-.1-.1-.1-.1 0-.4.1-.4-.1.1-.6.3-.9.7-1.2v-.1c-.3-.3-1.3-.5-1.9-.2-.1 0-.2-.1 0-.3v-.1c-.2-.2-.9-.2-1.6.2-.1 0-.2 0-.1-.2 0-.1 0-.1-.1-.1-.4 0-.9.1-1.3.6 0 0-.2.1-.2-.2 0-.1-.1-.1-.1-.1-1.2.3-2.4 2.6-.9 3.3z" />
-                    <path fill="#E30A33"
-                        d="m10.6 13.5c.7-.4 1.4-.9 1.9-1.6.7-.8.2-1.2-.8-1-.8.2-1.5.8-1.9 1.6-.4 1-.1 1.5.8 1z" />
-                    <path fill="#E30A33"
-                        d="m21.9 15.6c-.2.9-.1 2 .2 2.8.4.7.8.5 1.1-.3s.2-1.7-.2-2.4c-.4-.9-.9-.8-1.1-.1z" />
-                    <path fill="#E30A33"
-                        d="m15.6 23.4c-1.7 0-2.7.8-1.7 1.5.5.3 1 .5 1.7.5.6 0 1.2-.2 1.7-.5 1-.7 0-1.5-1.7-1.5z" />
-                    <path fill="#E30A33" d="m19.9 23.3c1.1-.2 2.1-1.4 2.1-2.5-.2-4.2-6.1 3.2-2.1 2.5z" />
-                    <path fill="#3098D4"
-                        d="m26.7.1h-22.1c-2.1 0-3.9 1.7-3.9 3.9v22.1c0 2.1 1.7 3.9 3.9 3.9h22.1c2.1 0 3.9-1.7 3.9-3.9v-22.2c-.1-2.1-1.8-3.8-3.9-3.8zm-2.8 19.4c-.1.5-.4 1.1-.7 1.5-.1.8-.4 1.6-1 2.3s-1.3 1.1-2.2 1.3c-.5.5-1 .8-1.7 1.1-.3.3-1.2 1.1-2.7 1.1s-2.4-.8-2.7-1.1c-.7-.3-1.2-.6-1.7-1.1-.8-.2-1.6-.6-2.2-1.3s-.9-1.5-1-2.3c-.3-.4-.6-1-.7-1.5-.6-.6-.9-1.6-.8-2.7s.6-2 1.3-2.5c.1-.4.3-.8.6-1.2 0-.5.3-1.5 1.3-2.4-.1-.1-.2-.2-.3-.4-.8-.3-1.4-1.1-1.5-1.7-.4-.4-.7-1-.7-1.5 0-.2 0-.5.1-.7-.3-.4-.5-.9-.3-1.3.2-.7 1.1-1.2 2.3-1.2.3-.3.8-.4 1.3-.4.2 0 .5 0 .7.1.2-.1.4-.1.7-.1.4 0 .9.1 1.3.4h.2c.6 0 1.2.4 1.5.6s.6.5.8.8c.2-.3.5-.6.8-.8s.9-.6 1.5-.6h.2c.4-.2.9-.4 1.3-.4.3 0 .5 0 .7.1.2-.1.5-.1.7-.1.5 0 1 .2 1.3.4 1.2 0 2 .5 2.3 1.2.2.5 0 .9-.3 1.3.1.2.1.4.1.7 0 .5-.3 1.1-.7 1.5-.1.6-.7 1.4-1.5 1.7-.1.1-.2.3-.3.4 1 .9 1.2 1.9 1.3 2.4.3.3.5.7.6 1.2.7.5 1.2 1.5 1.3 2.5-.3 1-.6 2-1.2 2.7z" />
-                    <ellipse fill="#E30A33" cx="15.6" cy="20.4" rx="2.3" ry="2" />
-                    <path fill="#E30A33"
-                        d="m19.7 18.2c1-.6 1.3-2 .6-3.2s-2-1.6-3-1.1c-1 .6-1.3 2-.6 3.2s2 1.6 3 1.1z" />
+                    <path
+                        d="M15,9 L14,9 L13,9 L12,9 L11,9 L10,9 L10,10 L10,11 L10,12 L10,13 L10,14 L11,14 L12,14 L13,14 L14,14 L15,14 L15,13 L15,12 L15,11 L15,10 L15,9 Z M16,9 L17,9 L17,10 L16,10 L16,11 L17,11 L17,12 L16,12 L16,13 L17,13 L17,14 L16,14 L16,14.308 C16,14.689 15.689,15 15.308,15 L15,15 L15,16 L14,16 L14,15 L13,15 L13,16 L12,16 L12,15 L11,15 L11,16 L10,16 L10,15 L9.692,15 C9.311,15 9,14.689 9,14.308 L9,14 L8,14 L8,13 L9,13 L9,12 L8,12 L8,11 L9,11 L9,10 L8,10 L8,9 L9,9 L9,8.692 C9,8.311 9.311,8 9.692,8 L10,8 L10,7 L11,7 L11,8 L12,8 L12,7 L13,7 L13,8 L14,8 L14,7 L15,7 L15,8 L15.308,8 C15.689,8 16,8.311 16,8.692 L16,9 Z M12,19 L5,19 L5,13 L7,13 L7,12 L4.8,12 C4.358,12 4,12.342 4,12.762 L4,19.219 C4,19.65 4.351,20 4.781,20 L12.2,20 C12.642,20 13,19.658 13,19.238 L13,17 L12,17 L12,19 Z M20,4.781 L20,12.219 C20,12.65 19.649,13 19.219,13 L18,13 L18,12 L19,12 L19,5 L12,5 L12,6 L11,6 L11,4.781 C11,4.35 11.351,4 11.781,4 L19.219,4 C19.649,4 20,4.35 20,4.781 L20,4.781 Z"
+                        id="Amazon-EC2_Icon_16_Squid" fill="#FFFFFF" />
                 </g>
             </svg>
+
         </div>
 
-        <p>We're working hard to bring you something amazing. Stay tuned!</p>
+        <p>Working on something interesting. Stay tuned!</p>
     </div>
     <div class="bubbles">
         <div class="bubble"></div>
