--- a/static/index.html
+++ b/static/index.html
@@ -202,7 +202,7 @@
     <div class="container">
         <h1>Under Development By Mehtab Alam Khan</h1>
         <div>
-            <h2>Hosted on AWS EC2 with 1vCPU 2.5Ghz 1GB</h2>
+            <h2>Running on AWS EC2 with 1vCPU 2.5Ghz 1GB EBS</h2>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px"
                 height="24px" viewBox="0 0 24 24" version="1.1">
                 <title>Icon-Architecture/16/Arch_Amazon-EC2_16</title>
