--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,8 @@
 
         .container {
             text-align: center;
+            justify-items: center;
+
         }
 
         h1 {
@@ -136,11 +138,8 @@
 
         /* Styles for social links */
         .social-links {
-            position: absolute;
-            bottom: 20px;
+            position: relative;
             /* Space from bottom */
-            left: 50%;
-            transform: translateX(-50%);
             display: flex;
             gap: 15px;
             /* Space between icons */
@@ -226,6 +225,29 @@
         </div>
 
         <p>Working on something interesting. Stay tuned!</p>
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/mehtab007/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="24px"
+                    width="24px" version="1.1" id="Layer_1" viewBox="0 0 291.319 291.319" xml:space="preserve">
+                    <g>
+                        <path style="fill:#0E76A8;"
+                            d="M145.659,0c80.45,0,145.66,65.219,145.66,145.66s-65.21,145.659-145.66,145.659S0,226.1,0,145.66   S65.21,0,145.659,0z" />
+                        <path style="fill:#FFFFFF;"
+                            d="M82.079,200.136h27.275v-90.91H82.079V200.136z M188.338,106.077   c-13.237,0-25.081,4.834-33.483,15.504v-12.654H127.48v91.21h27.375v-49.324c0-10.424,9.55-20.593,21.512-20.593   s14.912,10.169,14.912,20.338v49.57h27.275v-51.6C218.553,112.686,201.584,106.077,188.338,106.077z M95.589,100.141   c7.538,0,13.656-6.118,13.656-13.656S103.127,72.83,95.589,72.83s-13.656,6.118-13.656,13.656S88.051,100.141,95.589,100.141z" />
+                    </g>
+                </svg>
+            </a>
+            <a href="https://github.com/MehtabAlamKhan" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 -0.5 24 24"
+                    id="meteor-icon-kit__regular-github" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M12.2047 0.00001C6.56031 -0.005731 1.74628 4.08615 0.842541 9.6577C-0.061195 15.2293 3.2126 20.6331 8.56941 22.4118C9.14823 22.5177 9.35294 22.1577 9.35294 21.8541C9.35294 21.5506 9.35294 20.8588 9.35294 19.8988C6.14117 20.5977 5.46353 18.3529 5.46353 18.3529C5.25046 17.6572 4.79779 17.0595 4.18588 16.6659C3.14823 15.96 4.27059 15.96 4.27059 15.96C5.00761 16.0641 5.65578 16.5014 6.02823 17.1459C6.34368 17.7179 6.87393 18.1406 7.50179 18.3208C8.12965 18.5009 8.8034 18.4236 9.37411 18.1059C9.41842 17.5252 9.66876 16.9794 10.08 16.5671C7.5247 16.2777 4.84235 15.2894 4.84235 10.92C4.82481 9.7786 5.24688 8.67412 6.02117 7.8353C5.67632 6.84285 5.71662 5.7571 6.13412 4.79295C6.13412 4.79295 7.10117 4.48236 9.29647 5.97177C11.1816 5.45419 13.1713 5.45419 15.0565 5.97177C17.2518 4.48236 18.2118 4.79295 18.2118 4.79295C18.6351 5.74689 18.6854 6.82486 18.3529 7.81412C19.1272 8.65294 19.5493 9.7574 19.5318 10.8988C19.5318 15.3177 16.8424 16.2847 14.28 16.5459C14.8359 17.1047 15.1218 17.8774 15.0635 18.6635C15.0635 20.2024 15.0635 21.4447 15.0635 21.8188C15.0635 22.1929 15.2682 22.4824 15.8541 22.3694C21.1473 20.5447 24.3569 15.1728 23.4554 9.6469C22.5539 4.1211 17.8034 0.04779 12.2047 0.00001z"
+                        fill="#758CA3" />
+                </svg>
+            </a>
+
+
+        </div>
     </div>
     <div class="bubbles">
         <div class="bubble"></div>
@@ -234,29 +256,7 @@
         <div class="bubble"></div>
         <div class="bubble"></div>
     </div>
-    <div class="social-links">
-        <a href="https://www.linkedin.com/in/mehtab007/" target="_blank">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="24px"
-                width="24px" version="1.1" id="Layer_1" viewBox="0 0 291.319 291.319" xml:space="preserve">
-                <g>
-                    <path style="fill:#0E76A8;"
-                        d="M145.659,0c80.45,0,145.66,65.219,145.66,145.66s-65.21,145.659-145.66,145.659S0,226.1,0,145.66   S65.21,0,145.659,0z" />
-                    <path style="fill:#FFFFFF;"
-                        d="M82.079,200.136h27.275v-90.91H82.079V200.136z M188.338,106.077   c-13.237,0-25.081,4.834-33.483,15.504v-12.654H127.48v91.21h27.375v-49.324c0-10.424,9.55-20.593,21.512-20.593   s14.912,10.169,14.912,20.338v49.57h27.275v-51.6C218.553,112.686,201.584,106.077,188.338,106.077z M95.589,100.141   c7.538,0,13.656-6.118,13.656-13.656S103.127,72.83,95.589,72.83s-13.656,6.118-13.656,13.656S88.051,100.141,95.589,100.141z" />
-                </g>
-            </svg>
-        </a>
-        <a href="https://github.com/MehtabAlamKhan" target="_blank">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 -0.5 24 24"
-                id="meteor-icon-kit__regular-github" fill="none">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M12.2047 0.00001C6.56031 -0.005731 1.74628 4.08615 0.842541 9.6577C-0.061195 15.2293 3.2126 20.6331 8.56941 22.4118C9.14823 22.5177 9.35294 22.1577 9.35294 21.8541C9.35294 21.5506 9.35294 20.8588 9.35294 19.8988C6.14117 20.5977 5.46353 18.3529 5.46353 18.3529C5.25046 17.6572 4.79779 17.0595 4.18588 16.6659C3.14823 15.96 4.27059 15.96 4.27059 15.96C5.00761 16.0641 5.65578 16.5014 6.02823 17.1459C6.34368 17.7179 6.87393 18.1406 7.50179 18.3208C8.12965 18.5009 8.8034 18.4236 9.37411 18.1059C9.41842 17.5252 9.66876 16.9794 10.08 16.5671C7.5247 16.2777 4.84235 15.2894 4.84235 10.92C4.82481 9.7786 5.24688 8.67412 6.02117 7.8353C5.67632 6.84285 5.71662 5.7571 6.13412 4.79295C6.13412 4.79295 7.10117 4.48236 9.29647 5.97177C11.1816 5.45419 13.1713 5.45419 15.0565 5.97177C17.2518 4.48236 18.2118 4.79295 18.2118 4.79295C18.6351 5.74689 18.6854 6.82486 18.3529 7.81412C19.1272 8.65294 19.5493 9.7574 19.5318 10.8988C19.5318 15.3177 16.8424 16.2847 14.28 16.5459C14.8359 17.1047 15.1218 17.8774 15.0635 18.6635C15.0635 20.2024 15.0635 21.4447 15.0635 21.8188C15.0635 22.1929 15.2682 22.4824 15.8541 22.3694C21.1473 20.5447 24.3569 15.1728 23.4554 9.6469C22.5539 4.1211 17.8034 0.04779 12.2047 0.00001z"
-                    fill="#758CA3" />
-            </svg>
-        </a>
 
-
-    </div>
     <script>
         function toggleTheme() {
             document.body.classList.toggle('light-mode');
