--- a/static/index.html
+++ b/static/index.html
@@ -25,8 +25,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            overflow: hidden;
+            min-height: 100vh;
+            /* overflow: hidden; */
             margin: 0;
             color: aliceblue;
             transition: background-color 0.5s, color 0.5s;
