--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,7 @@
             /* Pure black background */
             font-family: 'F';
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
@@ -41,7 +42,7 @@
         .container {
             text-align: center;
             justify-items: center;
-
+            display: block;
         }
 
         h1 {
@@ -126,9 +127,9 @@
         }
 
         .theme-toggle {
-            position: absolute;
-            top: 10px;
-            right: 10px;
+            position: relative;
+            /* top: 10px; */
+            right: 0px;
             background: none;
             border: none;
             font-size: 2rem;
@@ -156,6 +157,20 @@
         .social-links a:hover {
             color: #ff6767;
             /* Change color on hover */
+        }
+
+        @media (max-width: 500px) {
+            h1 {
+                font-size: 1.6rem;
+            }
+
+            h2 {
+                font-size: 1.4rem;
+            }
+
+            p {
+                font-size: 0.9rem;
+            }
         }
 
         @keyframes slideIn {
@@ -197,7 +212,9 @@
 </head>
 
 <body class="dark-mode">
-    <button class="theme-toggle" onclick="toggleTheme()">🌚</button>
+    <div>
+        <button class="theme-toggle" onclick="toggleTheme()">🌚</button>
+    </div>
     <div class="container">
         <h1>Under Development By Mehtab Alam Khan</h1>
         <div>
