--- a/static/index.html
+++ b/static/index.html
@@ -27,10 +27,17 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            /* overflow: hidden; */
+            overflow: hidden;
+            overflow-y: scroll;
+            overflow: -moz-hidden;
+            scrollbar-width: none;
             margin: 0;
             color: aliceblue;
             transition: background-color 0.5s, color 0.5s;
+        }
+
+        body::-webkit-scrollbar {
+            display: none;
         }
 
         body.light-mode {
@@ -42,7 +49,9 @@
         .container {
             text-align: center;
             justify-items: center;
-            display: block;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
         }
 
         h1 {
