--- a/static/index.html
+++ b/static/index.html
@@ -61,10 +61,12 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            margin: 0;
+            margin-top: 80px;
         }
 
         h2 {
-            font-size: 2rem;
+            font-size: 1.8rem;
             animation: slideIn 0.5s ease-out;
             display: flex;
             justify-content: center;
@@ -73,6 +75,8 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
+            margin: 0;
+            margin-top: 10px;
         }
 
         p {
@@ -136,9 +140,9 @@
         }
 
         .theme-toggle {
-            position: relative;
-            /* top: 10px; */
-            right: 0px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
             background: none;
             border: none;
             font-size: 2rem;
@@ -221,9 +225,9 @@
 </head>
 
 <body class="dark-mode">
-    <div>
-        <button class="theme-toggle" onclick="toggleTheme()">🌚</button>
-    </div>
+
+    <button class="theme-toggle" onclick="toggleTheme()">🌚</button>
+
     <div class="container">
         <h1>Under Development By Mehtab Alam Khan</h1>
         <div>
